# PyGCEditor

./: .git-blame-ignore-revs  .gitignore  Borderlands_Region_Era_1.XML  Borderlands_Region_Era_2.XML  Borderlands_Region_Era_3.XML  Borderlands_Region_Era_4.XML  Borderlands_Region_Era_5.XML  Borderlands_Region_Era_6.XML  Borderlands_Region_Era_7.XML  DisplayHelpers.py  Full_Galaxy_Large_Era_1.XML  Full_Galaxy_Large_Era_7.XML  Full_Galaxy_Medium_Era_1.XML  Full_Galaxy_Medium_Era_2.XML  Full_Galaxy_Medium_Era_3.XML  Full_Galaxy_Medium_Era_7.XML  Full_Galaxy_Small_Era_1.XML  Full_Galaxy_Small_Era_2.XML  Full_Galaxy_Small_Era_3.XML  Full_Galaxy_Small_Era_4.XML  Full_Galaxy_Small_Era_5.XML  Full_Galaxy_Small_Era_6.XML  Full_Galaxy_Small_Era_7.XML  GraphWindow.py  Known_Galaxy_Large_Era_1.XML  Known_Galaxy_Large_Era_2.XML  Known_Galaxy_Large_Era_3.XML  Known_Galaxy_Large_Era_4.XML  Known_Galaxy_Large_Era_5.XML  Known_Galaxy_Large_Era_6.XML  Known_Galaxy_Large_Era_7.XML  Known_Galaxy_Medium_Era_1.XML  Known_Galaxy_Medium_Era_2.XML  Known_Galaxy_Medium_Era_3.XML  Known_Galaxy_Medium_Era_4.XML  Known_Galaxy_Medium_Era_5.XML  Known_Galaxy_Medium_Era_6.XML  Known_Galaxy_Medium_Era_7.XML  Known_Galaxy_Small_Era_1.XML  Known_Galaxy_Small_Era_2.XML  (+21 more)
commands/: Command.py  ShowAutoConnectionSettingsCommand.py  ShowCampaignPropertiesDialogCommand.py  ShowOptionsDialogCommand.py  ShowPlanetFileHiderCommand.py  ShowTradeCreatorDialogCommand.py
gameObjects/: aiplayer.py  campaign.py  faction.py  gameObjectRepository.py  planet.py  startingForce.py  traderoute.py  unit.py
graph/: kdtree.py
(+63 files in other folders)
