[project]
name = "pygceditor"
version = "0.1.0"
description = "Python-based GC editor for EAWX mods"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"colorama==0.4.5",
	"cycler==0.11.0",
	"fonttools==4.36.0",
	"kiwisolver==1.4.4",
	"lxml==4.9.1",
	"matplotlib==3.5.3",
	"numpy==1.23.2",
	"packaging==21.3",
	"pandas==1.4.3",
	"Pillow==9.2.0",
	"pyparsing==3.0.9",
	"PyQt6==6.3.1",
	"PyQt6-Qt6==6.3.1",
	"PyQt6-sip==13.4.0",
	"python-dateutil==2.8.2",
	"pytz==2022.2.1",
	"six==1.16.0",
	"tqdm==4.64.0",
]
